--- a/main.ipynb
+++ b/main.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import math"
    ]
   },
   {
@@ -17,13 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# original = cv2.imread(\"board.png\")\n",
-    "original = cv2.imread(\"pic-good.jpg\")\n",
-    "\n",
-    "# rescale, grayscale and blur\n",
-    "img = cv2.resize(original, (500, 500), interpolation=cv2.INTER_AREA)\n",
-    "img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "img = cv2.GaussianBlur(img, (5, 5), 0)"
+    "# read grayscale\n",
+    "original = cv2.imread(\"pic.jpg\", cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
@@ -32,11 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Display the original and processed images\n",
-    "# cv2.imshow(\"Original Image\", original)\n",
-    "# cv2.imshow(\"Resized, Grayscale, and Blurred Image\", img)\n",
-    "# cv2.waitKey(0)\n",
-    "# cv2.destroyAllWindows()"
+    "# rescale and blur\n",
+    "img = cv2.resize(original, (500, 500), interpolation=cv2.INTER_AREA)\n",
+    "# img = cv2.GaussianBlur(img, (5, 5), 0)"
    ]
   },
   {
@@ -45,25 +39,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getSaddle(gray_img):\n",
-    "    img = gray_img.astype(np.float64)\n",
-    "    gx = cv2.Sobel(img, cv2.CV_64F, 1, 0)\n",
-    "    gy = cv2.Sobel(img, cv2.CV_64F, 0, 1)\n",
-    "    gxx = cv2.Sobel(gx, cv2.CV_64F, 1, 0)\n",
-    "    gyy = cv2.Sobel(gy, cv2.CV_64F, 0, 1)\n",
-    "    gxy = cv2.Sobel(gx, cv2.CV_64F, 0, 1)\n",
+    "def erode(img, size):\n",
+    "    element = cv2.getStructuringElement(\n",
+    "        cv2.MORPH_RECT, (2 * size + 1, 2 * size + 1), (size, size)\n",
+    "    )\n",
     "\n",
-    "    S = gxx * gyy - gxy**2\n",
-    "    return S\n",
+    "    return cv2.erode(img, element)\n",
     "\n",
     "\n",
-    "def pruneSaddle(s):\n",
-    "    thresh = 128\n",
-    "    score = (s > 0).sum()\n",
-    "    while score > 10000:\n",
-    "        thresh = thresh * 2\n",
-    "        s[s < thresh] = 0\n",
-    "        score = (s > 0).sum()"
+    "def dilate(img, size):\n",
+    "    element = cv2.getStructuringElement(\n",
+    "        cv2.MORPH_RECT, (2 * size + 1, 2 * size + 1), (size, size)\n",
+    "    )\n",
+    "\n",
+    "    return cv2.dilate(img, element)\n",
+    "\n",
+    "\n",
+    "def opening(x, size=3):\n",
+    "    return dilate(erode(x, size), size)\n",
+    "\n",
+    "\n",
+    "def closing(x, size=3):\n",
+    "    return erode(dilate(x, size), size)\n",
+    "\n",
+    "\n",
+    "def sobelY(img):\n",
+    "    sobelx64f = cv2.Sobel(img, cv2.CV_64F, 1, 0, ksize=3)\n",
+    "    abs_sobel64f = np.absolute(sobelx64f)\n",
+    "    return np.uint8(abs_sobel64f)\n",
+    "\n",
+    "\n",
+    "def sobelX(img):\n",
+    "    sobelx64f = cv2.Sobel(img, cv2.CV_64F, 0, 1, ksize=3)\n",
+    "    abs_sobel64f = np.absolute(sobelx64f)\n",
+    "    return np.uint8(abs_sobel64f)"
    ]
   },
   {
@@ -72,11 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "saddle = getSaddle(img)\n",
-    "saddle = -saddle\n",
-    "saddle[saddle < 0] = 0\n",
-    "\n",
-    "pruneSaddle(saddle)"
+    "img = opening(img, 3)\n",
+    "img = closing(img, 5)\n",
+    "# img = cv2.medianBlur(img, 5)\n",
+    "sobY = sobelY(img)\n",
+    "sobX = sobelX(img)\n",
+    "sum = cv2.addWeighted(sobX, 0.5, sobY, 0.5, 0)"
    ]
   },
   {
@@ -106,8 +116,59 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(saddle, cmap=\"Greys_r\")"
+    "# Convert to binary\n",
+    "_, dst = cv2.threshold(sum, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)\n",
+    "# Color for red lines\n",
+    "cdst = cv2.cvtColor(dst, cv2.COLOR_GRAY2BGR)\n",
+    "\n",
+    "#  Standard Hough Line Transform\n",
+    "lines = cv2.HoughLines(dst, 1, np.pi / 180, 150, None, 0, 0)\n",
+    "if lines is not None:\n",
+    "    for i in range(0, len(lines)):\n",
+    "        rho = lines[i][0][0]\n",
+    "        theta = lines[i][0][1]\n",
+    "        a = math.cos(theta)\n",
+    "        b = math.sin(theta)\n",
+    "        x0 = a * rho\n",
+    "        y0 = b * rho\n",
+    "        pt1 = (int(x0 + 1000 * (-b)), int(y0 + 1000 * (a)))\n",
+    "        pt2 = (int(x0 - 1000 * (-b)), int(y0 - 1000 * (a)))\n",
+    "\n",
+    "        cv2.line(cdst, pt1, pt2, (0, 0, 255), 3, cv2.LINE_AA)\n",
+    "# Show results\n",
+    "cv2.imshow(\"Detected Lines (in red) - Standard Hough Line Transform\", cdst)\n",
+    "cv2.waitKey()\n",
+    "\n",
+    "# phase = cv2.phase(sobX, sobY)\n",
+    "# # sobX = closing(sobX, 3)\n",
+    "# # multiplied = cv2.multiply(sobX, sobY)\n",
+    "\n",
+    "# plt.imshow(phase, cmap=\"gray\")\n",
+    "# # plt.waitforbuttonpress()\n",
+    "# # exit()\n",
+    "\n",
+    "# grapharr = phase\n",
+    "\n",
+    "# fig, ax = plt.subplots()\n",
+    "# plt.subplots_adjust(bottom=0.25)\n",
+    "# y = 50\n",
+    "# (line,) = plt.plot(grapharr[y])\n",
+    "# plt.grid(True)\n",
+    "\n",
+    "\n",
+    "# def update(val):\n",
+    "#     y = int(val)\n",
+    "#     line.set_ydata(grapharr[y])\n",
+    "#     fig.canvas.draw_idle()\n",
+    "\n",
+    "\n",
+    "# from matplotlib.widgets import Slider\n",
+    "\n",
+    "# ax_index = plt.axes([0.25, 0.1, 0.65, 0.03])\n",
+    "# slider_index = Slider(ax_index, \"Y\", 0, len(grapharr) - 1, valinit=y, valstep=1)\n",
+    "# slider_index.on_changed(update)\n",
+    "\n",
+    "# plt.show()"
    ]
   },
   {
