Get lichess pieces

--- a/classify-pieces/train.ipynb
+++ b/classify-pieces/train.ipynb
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "!yolo task=classify mode=predict model={HOME}/runs/classify/train/weights/best.pt conf=0.25 source={HOME}/knight.png"
+    "!yolo task=classify mode=predict model={HOME}/runs/classify/train/weights/best.pt conf=0.25 source={HOME}/pieces"
    ]
   }
  ],
