Gen blank tiles

--- a/gen-training-data.ipynb
+++ b/gen-training-data.ipynb
@@ -1039,6 +1039,28 @@
     "\n",
     "print(f\"Done! generated {count} images\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_empty_tiles(save_path):\n",
+    "    count = 0\n",
+    "\n",
+    "    for r in range(4):\n",
+    "        for g in range(4):\n",
+    "            for b in range(4):\n",
+    "                image = np.ones((150, 150, 3), dtype=np.uint8) * (b * 64 + random.randint(0, 32), g * 64 + random.randint(0, 32), r * 64 + random.randint(0, 32))\n",
+    "                cv2.imwrite(f\"{save_path}/empty-{count}.png\", image)\n",
+    "                count += 1\n",
+    "\n",
+    "dir = f\"generated/empty\"\n",
+    "if not os.path.exists(dir):\n",
+    "    os.makedirs(dir)\n",
+    "gen_empty_tiles(dir)"
+   ]
   }
  ],
  "metadata": {
