--- a/main.ipynb
+++ b/main.ipynb
@@ -20,13 +20,13 @@
    "outputs": [],
    "source": [
     "# read grayscale\n",
-    "# original = cv2.imread(\"pic.jpg\", cv2.IMREAD_GRAYSCALE)\n",
-    "# original = cv2.imread(\"mirror.jpg\", cv2.IMREAD_GRAYSCALE)\n",
-    "# original = cv2.imread(\"board.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "# original = cv2.imread(\"respawn.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "original = cv2.imread(\"respawn2.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "# original = cv2.imread(\"board-light.png\", cv2.IMREAD_GRAYSCALE)\n",
-    "# original = cv2.imread(\"example.jpeg\", cv2.IMREAD_GRAYSCALE)"
+    "# original = cv2.imread(\"test-images/pic.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "# original = cv2.imread(\"test-images/mirror.jpg\", cv2.IMREAD_GRAYSCALE)\n",
+    "# original = cv2.imread(\"test-images/board.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "# original = cv2.imread(\"test-images/respawn.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "original = cv2.imread(\"test-images/respawn2.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "# original = cv2.imread(\"test-images/board-light.png\", cv2.IMREAD_GRAYSCALE)\n",
+    "# original = cv2.imread(\"test-images/example.jpeg\", cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
@@ -1255,7 +1255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
